Fix failing test cases & css overlapping

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@ html, body {
   background-color: var(--background-color);
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 100vw;
 }
 
 .app-container {
@@ -22,6 +22,7 @@ html, body {
   justify-content: start;
   align-items: flex-start;
   padding: 0;
+  margin-left: 5rem;
   overflow-y: auto;
   width: 100%;
   height: 100vh;
@@ -40,7 +41,6 @@ html, body {
 
 .dashboard-container {
   background-color: var(--background-color);
-  padding: 20px;
   width: 100%;
   box-sizing: border-box;
   display: flex;
@@ -67,6 +67,5 @@ html, body {
 #root {
   max-width: 1280px;
   padding: 2rem;
-  text-align: center;
   background-color: var(--background-color);
 }
